l-was-service.yaml
apiVersion: service.openshift.io/v1
kind: Service
metadata:
  name: hello-world-service     
spec:
  selector:                  
    name: hello-world
  ports:
  - name: 9080-tcp
    port: 9080               
    protocol: TCP
    targetPort: 9080
