l-was-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-route
  namespace: l-was
spec:
  path: /sample
  port:
    targetPort: 9080-tcp
  to:
    kind: Service
    name: hello-world-service
